--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
       <%= render "shared/flash" %>
       <%= render "shared/header" %>
       <%= yield %>
+      <%= render "shared/footer" %>
     </main>
   </body>
 </html>
