--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,8 @@
 <% meta title: "Privacy Policy", description: "Read our privacy policy." %>
 
+<%= render partial: "shared/heading", locals: {title: 'Privacy policy', tagline: 'Add further details please'} %>
+
+
 <div class="max-w-3xl mx-auto relative pt-6 pb-16 sm:pb-24">
   <h1 class="text-center text-2xl tracking-tight font-extrabold text-gray-900 sm:text-3xl md:text-4xl">Privacy Policy for <%= Rails.application.credentials.company_name %></h1>
 
