--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,18 +17,10 @@
 
     <div id="main-nav" class="w-full flex-grow sm:flex text-right sm:w-auto hidden" data-header-target="mainNav">
       <div class="text-sm sm:flex-grow">
-        <%= link_to 'Admin', admin_root_path, class: nav_link_classes('admin/dashboard') if current_user&.admin? %>
-
-        <%= link_to 'Blog', blog_posts_path, class: nav_link_classes('blog') %>
-        <% if current_user %>
-          <%= link_to 'Dashboard', dashboard_index_path, class: nav_link_classes('dashboard') %>
-          <%= link_to 'Account', account_index_path, class: nav_link_classes('account') %>
-          <%= link_to 'Logout', logout_path, class: nav_link_classes %>
-        <% else %>
-          <%= link_to 'Contact', "mailto:#{Rails.application.credentials.admin_email}", target: '_blank', class: nav_link_classes('contact')  %>
-          <%= link_to 'Login', new_user_session_path, class: nav_link_classes('login') %>
-          <%= link_to 'Signup', new_user_registration_path, class: 'ml-8 whitespace-nowrap text-base font-medium inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-white bg-primary-600 hover:bg-primary-700' %>
-        <% end %>
+          # TODO: Restrict the view for admin
+          <a class="<%= nav_link_classes %>" href="/admin">Admin</a>
+          <a class="<%= nav_link_classes %>" href="/dashboard">Dashboard</a>
+          <a class="<%= nav_link_classes %>" href="/dashboard">Logout</a>
       </div>
     </div>
   </nav>
