whitelisted form params

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
           24-hour support response time
         </li>
       </ul>
-      <a href="/apply?=free" aria-describedby="tier-hobby" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 sm:mt-10 text-primary ring-1 ring-inset ring-primary hover:ring-primary focus-visible:outline-primary">Free plan</a>
+      <a href="/apply?plan=free" aria-describedby="tier-hobby" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 sm:mt-10 text-primary ring-1 ring-inset ring-primary hover:ring-primary focus-visible:outline-primary">Free plan</a>
     </div>
     <div class="rounded-3xl p-8 ring-1 ring-gray-900/10 sm:p-10 relative bg-gray-900 shadow-2xl">
       <h3 id="tier-enterprise" class="text-base font-semibold leading-7 text-primary">Enterprise</h3>
@@ -105,7 +105,7 @@
           Custom integrations
         </li>
       </ul>
-      <a href="/apply?=paid" aria-describedby="tier-enterprise" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 sm:mt-10 bg-primary text-white shadow-sm hover:bg-primary focus-visible:outline-primary">Paid plan</a>
+      <a href="/apply?plan=paid" aria-describedby="tier-enterprise" class="mt-8 block rounded-md py-2.5 px-3.5 text-center text-sm font-semibold focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 sm:mt-10 bg-primary text-white shadow-sm hover:bg-primary focus-visible:outline-primary">Paid plan</a>
     </div>
   </div>
 </div>
